--- a/views/base.pug
+++ b/views/base.pug
@@ -7,6 +7,7 @@ html
       link(rel='stylesheet', href='/css/style.css')
       link(rel='shortcut icon' type='image/png' href='/img/favicon.png')
       link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
+      //- script(src='https://js.stripe.com/v3/')
       title Natours | #{title}
 
   body
@@ -24,3 +25,4 @@ html
     //- script(src='/js/mapbox.js')
     //- script(src='/js/login.js')
     script(src='/js/bundle.js')
+    script(src='https://js.stripe.com/v3/')
